APL_Group_Project_CIT4004/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ATTEMPT
    COLON
    CONTRACT
    DO
    EMIT
    END
    EVENT
    EXTERNAL
    FINDOUT
    FUNCTIONID
    HAIL
    INTERNAL
    OSERROR
    PERSONNAME
    PRINT
    PRIVATE
    PUBLIC
    RETURN
    RETURNS
    SEMICOLON
    SET
    THEN
    TYPE_SPECIFIER
    VAR
    VISIBILITY
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement statements
Rule 3     statements -> empty
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> print_statement
Rule 7     statement -> conditionals
Rule 8     statement -> book_reservation
Rule 9     statement -> view_list_reservations
Rule 10    statement -> cancel_reservation
Rule 11    statement -> cancel_reservation_identifier
Rule 12    statement -> confirm_reservation
Rule 13    statement -> confirm_reservation_identifier
Rule 14    statement -> pay_reservation
Rule 15    statement -> pay_reservation_identifier
Rule 16    statement -> list_api_events
Rule 17    statement -> cancel_ticket_identifier
Rule 18    statement -> cancel_ticket
Rule 19    statement -> book_ticket
Rule 20    statement -> view_list_tickets
Rule 21    statement -> view_specific_tickets
Rule 22    statement -> view_specific_reservations
Rule 23    declaration -> mutex type IDENTIFIER EQUAL expression LINEEND
Rule 24    declaration -> mutex type IDENTIFIER LINEEND
Rule 25    book_reservation -> BOOK RESERVATION ATPLACE place_name FOR person_name ON date FROM start_location TO destination ATTIME record_time LINEEND
Rule 26    book_reservation -> BOOK RESERVATION ATPLACE place_name FOR person_name ON date ATTIME record_time LINEEND
Rule 27    book_ticket -> BOOK TICKET ATPLACE place_name FOR person_name ON date FROM start_location TO destination ATTIME record_time LINEEND
Rule 28    cancel_ticket -> CANCEL TICKET ATPLACE place_name FOR person_name LINEEND
Rule 29    cancel_ticket_identifier -> CANCEL TICKET ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
Rule 30    cancel_reservation -> CANCEL RESERVATION ATPLACE place_name FOR person_name LINEEND
Rule 31    cancel_reservation_identifier -> CANCEL RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
Rule 32    confirm_reservation -> CONFIRM RESERVATION ATPLACE place_name FOR person_name LINEEND
Rule 33    confirm_reservation_identifier -> CONFIRM RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
Rule 34    pay_reservation -> PAY RESERVATION ATPLACE place_name FOR person_name LINEEND
Rule 35    pay_reservation_identifier -> PAY RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
Rule 36    list_api_events -> LIST ai_prompt LINEEND
Rule 37    place_name -> STRING_LITERAL
Rule 38    place_name -> IDENTIFIER
Rule 39    record_time -> STRING_LITERAL
Rule 40    record_time -> IDENTIFIER
Rule 41    ai_prompt -> STRING_LITERAL
Rule 42    ai_prompt -> IDENTIFIER
Rule 43    person_name -> STRING_LITERAL
Rule 44    person_name -> IDENTIFIER
Rule 45    start_location -> STRING_LITERAL
Rule 46    start_location -> IDENTIFIER
Rule 47    destination -> STRING_LITERAL
Rule 48    destination -> IDENTIFIER
Rule 49    date -> DATESTRING
Rule 50    record_identifier -> INTEGER
Rule 51    record_identifier -> STRING_LITERAL
Rule 52    record_identifier -> IDENTIFIER
Rule 53    view_list_reservations -> VIEW RESERVATION DCOLON reservation_status LINEEND
Rule 54    view_specific_reservations -> VIEW RESERVATION FOR person_name LINEEND
Rule 55    view_list_tickets -> VIEW TICKET DCOLON ticket_status LINEEND
Rule 56    view_specific_tickets -> VIEW TICKET FOR person_name LINEEND
Rule 57    reservation_status -> STRING_LITERAL
Rule 58    reservation_status -> IDENTIFIER
Rule 59    ticket_status -> STRING_LITERAL
Rule 60    ticket_status -> IDENTIFIER
Rule 61    assignment -> IDENTIFIER EQUAL expression LINEEND
Rule 62    print_statement -> OUTPUT LPAREN STRING_LITERAL RPAREN LINEEND
Rule 63    print_statement -> OUTPUT LPAREN IDENTIFIER RPAREN LINEEND
Rule 64    print_statement -> OUTPUT LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN LINEEND
Rule 65    print_statement -> OUTPUT LPAREN STRING_LITERAL COMMA IDENTIFIER RPAREN LINEEND
Rule 66    conditionals -> if_statement
Rule 67    conditionals -> for_statement
Rule 68    conditionals -> repeatif_statement
Rule 69    if_statement -> IF expression LBRACE statements RBRACE
Rule 70    if_statement -> IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 71    if_statement -> IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE
Rule 72    if_statement -> IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 73    for_statement -> FOR IDENTIFIER IN RANGE LPAREN arguments RPAREN LBRACE statements RBRACE
Rule 74    for_statement -> FOR IDENTIFIER IN iterables LBRACE statements RBRACE
Rule 75    iterables -> STRING_LITERAL
Rule 76    iterables -> IDENTIFIER
Rule 77    repeatif_statement -> REPEATIF expression LBRACE statements RBRACE
Rule 78    expression -> LPAREN expression RPAREN
Rule 79    expression -> expression PLUS expression
Rule 80    expression -> expression MINUS expression
Rule 81    expression -> expression TIMES expression
Rule 82    expression -> expression DIVIDE expression
Rule 83    expression -> expression POWER expression
Rule 84    expression -> expression NOTEQUAL expression
Rule 85    expression -> expression LESSTHAN expression
Rule 86    expression -> expression GREATERTHAN expression
Rule 87    expression -> expression LESSTHANOREQUAL expression
Rule 88    expression -> expression GREATERTHANOREQUAL expression
Rule 89    expression -> expression EQUIVALENT expression
Rule 90    expression -> expression BITWISEAND expression
Rule 91    expression -> expression BITWISEOR expression
Rule 92    expression -> expression BITWISEXOR expression
Rule 93    expression -> expression SHIFTLEFT expression
Rule 94    expression -> expression SHIFTRIGHT expression
Rule 95    expression -> NOT expression
Rule 96    expression -> PLUS expression
Rule 97    expression -> MINUS expression
Rule 98    expression -> BITWISEINVERT expression
Rule 99    expression -> INTEGER
Rule 100   expression -> FLOAT
Rule 101   expression -> IDENTIFIER
Rule 102   expression -> BOOLEAN
Rule 103   expression -> STRING_LITERAL
Rule 104   error_type -> UNBOUNDLOCALERROR
Rule 105   error_type -> TYPEERROR
Rule 106   error_type -> VALUEERROR
Rule 107   error_type -> INDEXERROR
Rule 108   error_type -> KEYERROR
Rule 109   error_type -> EXCEPTION
Rule 110   error_type -> SYNTAXERROR
Rule 111   error_type -> STOPITERATION
Rule 112   error_type -> ARITHMETICERROR
Rule 113   error_type -> FLOATINGPOINTERROR
Rule 114   error_type -> OVERFLOWERROR
Rule 115   error_type -> ZERODIVISIONERROR
Rule 116   error_type -> ASSERTIONERROR
Rule 117   error_type -> ATTRIBUTEERROR
Rule 118   error_type -> BUFFERERROR
Rule 119   error_type -> EOFERROR
Rule 120   error_type -> IMPORTERROR
Rule 121   error_type -> MODULENOTFOUNERROR
Rule 122   error_type -> LOOKUPERROR
Rule 123   error_type -> MEMORYERROR
Rule 124   error_type -> NAMEERROR
Rule 125   error_type -> BLOCKINGIOERROR
Rule 126   error_type -> CHILDPROCESSERROR
Rule 127   error_type -> CONNECTIONERROR
Rule 128   error_type -> BROKENPIPEERROR
Rule 129   error_type -> CONNECTIONABORTEDERROR
Rule 130   error_type -> CONNECTIONREFUSEDERROR
Rule 131   error_type -> CONNECTIONRESETERROR
Rule 132   error_type -> FILEEXISTERROR
Rule 133   error_type -> FILENOTFOUNERROR
Rule 134   error_type -> INTERRUPTEDERROR
Rule 135   error_type -> ISADIRECTORYERROR
Rule 136   error_type -> NOTADIRECTORYERROR
Rule 137   error_type -> PERMISSIONERROR
Rule 138   error_type -> PROCESSLOOKUPERROR
Rule 139   error_type -> TIMEOUTERROR
Rule 140   error_type -> REFERENCEERROR
Rule 141   error_type -> RUNTIMEERROR
Rule 142   error_type -> INDENTATIONERROR
Rule 143   error_type -> TABERROR
Rule 144   error_type -> SYSTEMERROR
Rule 145   error_type -> UNICODEERROR
Rule 146   error_type -> UNICODEENCODEERROR
Rule 147   error_type -> UNICODEDECODEERROR
Rule 148   error_type -> UNICODETRANSLATEERROR
Rule 149   error_type -> WARNING
Rule 150   error_type -> USERWARNING
Rule 151   error_type -> DEPRECATIONWARNING
Rule 152   error_type -> PENDINGDEPRECATIONWARNING
Rule 153   error_type -> SYNTAXWARNING
Rule 154   error_type -> RUNTIMEWARNING
Rule 155   error_type -> FUTUREWARNING
Rule 156   error_type -> IMPORTWARNING
Rule 157   error_type -> UNICODEWARNING
Rule 158   error_type -> BYTESWARNING
Rule 159   error_type -> RESOURCEWARNING
Rule 160   error_type -> KEYBOARDINTERRUPT
Rule 161   parameter -> type IDENTIFIER
Rule 162   parameters -> parameter COMMA parameters
Rule 163   parameters -> parameter
Rule 164   parameters -> empty
Rule 165   arguments -> argument COMMA arguments
Rule 166   arguments -> argument
Rule 167   arguments -> empty
Rule 168   argument -> IDENTIFIER
Rule 169   argument -> expression
Rule 170   mutex -> DECLARE
Rule 171   type -> INT_TYPE
Rule 172   type -> FLOAT_TYPE
Rule 173   type -> BOOL_TYPE
Rule 174   type -> STRING_TYPE
Rule 175   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
ARITHMETICERROR      : 112
ASSERTIONERROR       : 116
ATPLACE              : 25 26 27 28 29 30 31 32 33 34 35
ATTEMPT              : 
ATTIME               : 25 26 27
ATTRIBUTEERROR       : 117
BITWISEAND           : 90
BITWISEINVERT        : 98
BITWISEOR            : 91
BITWISEXOR           : 92
BLOCKINGIOERROR      : 125
BOOK                 : 25 26 27
BOOLEAN              : 102
BOOL_TYPE            : 173
BROKENPIPEERROR      : 128
BUFFERERROR          : 118
BYTESWARNING         : 158
CANCEL               : 28 29 30 31
CHILDPROCESSERROR    : 126
COLON                : 
COMMA                : 64 65 162 165
CONFIRM              : 32 33
CONNECTIONABORTEDERROR : 129
CONNECTIONERROR      : 127
CONNECTIONREFUSEDERROR : 130
CONNECTIONRESETERROR : 131
CONTRACT             : 
DATESTRING           : 49
DCOLON               : 29 31 33 35 53 55
DECLARE              : 170
DEPRECATIONWARNING   : 151
DIVIDE               : 82
DO                   : 
ELIF                 : 71 72
ELSE                 : 70 72
EMIT                 : 
END                  : 
EOFERROR             : 119
EQUAL                : 23 61
EQUIVALENT           : 89
EVENT                : 
EXCEPTION            : 109
EXTERNAL             : 
FILEEXISTERROR       : 132
FILENOTFOUNERROR     : 133
FINDOUT              : 
FLOAT                : 100
FLOATINGPOINTERROR   : 113
FLOAT_TYPE           : 172
FOR                  : 25 26 27 28 29 30 31 32 33 34 35 54 56 73 74
FROM                 : 25 27
FUNCTIONID           : 
FUTUREWARNING        : 155
GREATERTHAN          : 86
GREATERTHANOREQUAL   : 88
HAIL                 : 
IDENTIFIER           : 23 24 38 40 42 44 46 48 52 58 60 61 63 64 64 65 73 74 76 101 161 168
IF                   : 69 70 71 72
IMPORTERROR          : 120
IMPORTWARNING        : 156
IN                   : 73 74
INDENTATIONERROR     : 142
INDEXERROR           : 107
INTEGER              : 50 99
INTERNAL             : 
INTERRUPTEDERROR     : 134
INT_TYPE             : 171
ISADIRECTORYERROR    : 135
KEYBOARDINTERRUPT    : 160
KEYERROR             : 108
LBRACE               : 69 70 70 71 71 72 72 72 73 74 77
LESSTHAN             : 85
LESSTHANOREQUAL      : 87
LINEEND              : 23 24 25 26 27 28 29 30 31 32 33 34 35 36 53 54 55 56 61 62 63 64 65
LIST                 : 36
LOOKUPERROR          : 122
LPAREN               : 62 63 64 65 73 78
MEMORYERROR          : 123
MINUS                : 80 97
MODULENOTFOUNERROR   : 121
NAMEERROR            : 124
NOT                  : 95
NOTADIRECTORYERROR   : 136
NOTEQUAL             : 84
ON                   : 25 26 27
OSERROR              : 
OUTPUT               : 62 63 64 65
OVERFLOWERROR        : 114
PAY                  : 34 35
PENDINGDEPRECATIONWARNING : 152
PERMISSIONERROR      : 137
PERSONNAME           : 
PLUS                 : 79 96
POWER                : 83
PRINT                : 
PRIVATE              : 
PROCESSLOOKUPERROR   : 138
PUBLIC               : 
RANGE                : 73
RBRACE               : 69 70 70 71 71 72 72 72 73 74 77
REFERENCEERROR       : 140
REPEATIF             : 77
RESERVATION          : 25 26 30 31 32 33 34 35 53 54
RESOURCEWARNING      : 159
RETURN               : 
RETURNS              : 
RPAREN               : 62 63 64 65 73 78
RUNTIMEERROR         : 141
RUNTIMEWARNING       : 154
SEMICOLON            : 
SET                  : 
SHIFTLEFT            : 93
SHIFTRIGHT           : 94
STOPITERATION        : 111
STRING_LITERAL       : 37 39 41 43 45 47 51 57 59 62 65 75 103
STRING_TYPE          : 174
SYNTAXERROR          : 110
SYNTAXWARNING        : 153
SYSTEMERROR          : 144
TABERROR             : 143
THEN                 : 
TICKET               : 27 28 29 55 56
TIMEOUTERROR         : 139
TIMES                : 81
TO                   : 25 27
TYPEERROR            : 105
TYPE_SPECIFIER       : 
UNBOUNDLOCALERROR    : 104
UNICODEDECODEERROR   : 147
UNICODEENCODEERROR   : 146
UNICODEERROR         : 145
UNICODETRANSLATEERROR : 148
UNICODEWARNING       : 157
USERWARNING          : 150
VALUEERROR           : 106
VAR                  : 
VIEW                 : 53 54 55 56
VISIBILITY           : 
WARNING              : 149
WHILE                : 
ZERODIVISIONERROR    : 115
error                : 

Nonterminals, with rules where they appear

ai_prompt            : 36
argument             : 165 166
arguments            : 73 165
assignment           : 5
book_reservation     : 8
book_ticket          : 19
cancel_reservation   : 10
cancel_reservation_identifier : 11
cancel_ticket        : 18
cancel_ticket_identifier : 17
conditionals         : 7
confirm_reservation  : 12
confirm_reservation_identifier : 13
date                 : 25 26 27
declaration          : 4
destination          : 25 27
empty                : 3 164 167
error_type           : 
expression           : 23 61 69 70 71 71 72 72 77 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 96 97 98 169
for_statement        : 67
if_statement         : 66
iterables            : 74
list_api_events      : 16
mutex                : 23 24
parameter            : 162 163
parameters           : 162
pay_reservation      : 14
pay_reservation_identifier : 15
person_name          : 25 26 27 28 29 30 31 32 33 34 35 54 56
place_name           : 25 26 27 28 29 30 31 32 33 34 35
print_statement      : 6
program              : 0
record_identifier    : 29 31 33 35
record_time          : 25 26 27
repeatif_statement   : 68
reservation_status   : 53
start_location       : 25 27
statement            : 2
statements           : 1 2 69 70 70 71 71 72 72 72 73 74 77
ticket_status        : 55
type                 : 23 24 161
view_list_reservations : 9
view_list_tickets    : 20
view_specific_reservations : 22
view_specific_tickets : 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement statements
    (3) statements -> . empty
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . print_statement
    (7) statement -> . conditionals
    (8) statement -> . book_reservation
    (9) statement -> . view_list_reservations
    (10) statement -> . cancel_reservation
    (11) statement -> . cancel_reservation_identifier
    (12) statement -> . confirm_reservation
    (13) statement -> . confirm_reservation_identifier
    (14) statement -> . pay_reservation
    (15) statement -> . pay_reservation_identifier
    (16) statement -> . list_api_events
    (17) statement -> . cancel_ticket_identifier
    (18) statement -> . cancel_ticket
    (19) statement -> . book_ticket
    (20) statement -> . view_list_tickets
    (21) statement -> . view_specific_tickets
    (22) statement -> . view_specific_reservations
    (175) empty -> .
    (23) declaration -> . mutex type IDENTIFIER EQUAL expression LINEEND
    (24) declaration -> . mutex type IDENTIFIER LINEEND
    (61) assignment -> . IDENTIFIER EQUAL expression LINEEND
    (62) print_statement -> . OUTPUT LPAREN STRING_LITERAL RPAREN LINEEND
    (63) print_statement -> . OUTPUT LPAREN IDENTIFIER RPAREN LINEEND
    (64) print_statement -> . OUTPUT LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN LINEEND
    (65) print_statement -> . OUTPUT LPAREN STRING_LITERAL COMMA IDENTIFIER RPAREN LINEEND
    (66) conditionals -> . if_statement
    (67) conditionals -> . for_statement
    (68) conditionals -> . repeatif_statement
    (25) book_reservation -> . BOOK RESERVATION ATPLACE place_name FOR person_name ON date FROM start_location TO destination ATTIME record_time LINEEND
    (26) book_reservation -> . BOOK RESERVATION ATPLACE place_name FOR person_name ON date ATTIME record_time LINEEND
    (53) view_list_reservations -> . VIEW RESERVATION DCOLON reservation_status LINEEND
    (30) cancel_reservation -> . CANCEL RESERVATION ATPLACE place_name FOR person_name LINEEND
    (31) cancel_reservation_identifier -> . CANCEL RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
    (32) confirm_reservation -> . CONFIRM RESERVATION ATPLACE place_name FOR person_name LINEEND
    (33) confirm_reservation_identifier -> . CONFIRM RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
    (34) pay_reservation -> . PAY RESERVATION ATPLACE place_name FOR person_name LINEEND
    (35) pay_reservation_identifier -> . PAY RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
    (36) list_api_events -> . LIST ai_prompt LINEEND
    (29) cancel_ticket_identifier -> . CANCEL TICKET ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
    (28) cancel_ticket -> . CANCEL TICKET ATPLACE place_name FOR person_name LINEEND
    (27) book_ticket -> . BOOK TICKET ATPLACE place_name FOR person_name ON date FROM start_location TO destination ATTIME record_time LINEEND
    (55) view_list_tickets -> . VIEW TICKET DCOLON ticket_status LINEEND
    (56) view_specific_tickets -> . VIEW TICKET FOR person_name LINEEND
    (54) view_specific_reservations -> . VIEW RESERVATION FOR person_name LINEEND
    (170) mutex -> . DECLARE
    (69) if_statement -> . IF expression LBRACE statements RBRACE
    (70) if_statement -> . IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (71) if_statement -> . IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE
    (72) if_statement -> . IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (73) for_statement -> . FOR IDENTIFIER IN RANGE LPAREN arguments RPAREN LBRACE statements RBRACE
    (74) for_statement -> . FOR IDENTIFIER IN iterables LBRACE statements RBRACE
    (77) repeatif_statement -> . REPEATIF expression LBRACE statements RBRACE

    $end            reduce using rule 175 (empty -> .)
    IDENTIFIER      shift and go to state 25
    OUTPUT          shift and go to state 26
    BOOK            shift and go to state 30
    VIEW            shift and go to state 32
    CANCEL          shift and go to state 33
    CONFIRM         shift and go to state 34
    PAY             shift and go to state 35
    LIST            shift and go to state 36
    DECLARE         shift and go to state 37
    IF              shift and go to state 38
    FOR             shift and go to state 31
    REPEATIF        shift and go to state 39

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    print_statement                shift and go to state 7
    conditionals                   shift and go to state 8
    book_reservation               shift and go to state 9
    view_list_reservations         shift and go to state 10
    cancel_reservation             shift and go to state 11
    cancel_reservation_identifier  shift and go to state 12
    confirm_reservation            shift and go to state 13
    confirm_reservation_identifier shift and go to state 14
    pay_reservation                shift and go to state 15
    pay_reservation_identifier     shift and go to state 16
    list_api_events                shift and go to state 17
    cancel_ticket_identifier       shift and go to state 18
    cancel_ticket                  shift and go to state 19
    book_ticket                    shift and go to state 20
    view_list_tickets              shift and go to state 21
    view_specific_tickets          shift and go to state 22
    view_specific_reservations     shift and go to state 23
    mutex                          shift and go to state 24
    if_statement                   shift and go to state 27
    for_statement                  shift and go to state 28
    repeatif_statement             shift and go to state 29

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement . statements
    (2) statements -> . statement statements
    (3) statements -> . empty
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . print_statement
    (7) statement -> . conditionals
    (8) statement -> . book_reservation
    (9) statement -> . view_list_reservations
    (10) statement -> . cancel_reservation
    (11) statement -> . cancel_reservation_identifier
    (12) statement -> . confirm_reservation
    (13) statement -> . confirm_reservation_identifier
    (14) statement -> . pay_reservation
    (15) statement -> . pay_reservation_identifier
    (16) statement -> . list_api_events
    (17) statement -> . cancel_ticket_identifier
    (18) statement -> . cancel_ticket
    (19) statement -> . book_ticket
    (20) statement -> . view_list_tickets
    (21) statement -> . view_specific_tickets
    (22) statement -> . view_specific_reservations
    (175) empty -> .
    (23) declaration -> . mutex type IDENTIFIER EQUAL expression LINEEND
    (24) declaration -> . mutex type IDENTIFIER LINEEND
    (61) assignment -> . IDENTIFIER EQUAL expression LINEEND
    (62) print_statement -> . OUTPUT LPAREN STRING_LITERAL RPAREN LINEEND
    (63) print_statement -> . OUTPUT LPAREN IDENTIFIER RPAREN LINEEND
    (64) print_statement -> . OUTPUT LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN LINEEND
    (65) print_statement -> . OUTPUT LPAREN STRING_LITERAL COMMA IDENTIFIER RPAREN LINEEND
    (66) conditionals -> . if_statement
    (67) conditionals -> . for_statement
    (68) conditionals -> . repeatif_statement
    (25) book_reservation -> . BOOK RESERVATION ATPLACE place_name FOR person_name ON date FROM start_location TO destination ATTIME record_time LINEEND
    (26) book_reservation -> . BOOK RESERVATION ATPLACE place_name FOR person_name ON date ATTIME record_time LINEEND
    (53) view_list_reservations -> . VIEW RESERVATION DCOLON reservation_status LINEEND
    (30) cancel_reservation -> . CANCEL RESERVATION ATPLACE place_name FOR person_name LINEEND
    (31) cancel_reservation_identifier -> . CANCEL RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
    (32) confirm_reservation -> . CONFIRM RESERVATION ATPLACE place_name FOR person_name LINEEND
    (33) confirm_reservation_identifier -> . CONFIRM RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
    (34) pay_reservation -> . PAY RESERVATION ATPLACE place_name FOR person_name LINEEND
    (35) pay_reservation_identifier -> . PAY RESERVATION ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
    (36) list_api_events -> . LIST ai_prompt LINEEND
    (29) cancel_ticket_identifier -> . CANCEL TICKET ATPLACE place_name FOR person_name DCOLON record_identifier LINEEND
    (28) cancel_ticket -> . CANCEL TICKET ATPLACE place_name FOR person_name LINEEND
    (27) book_ticket -> . BOOK TICKET ATPLACE place_name FOR person_name ON date FROM start_location TO destination ATTIME record_time LINEEND
    (55) view_list_tickets -> . VIEW TICKET DCOLON ticket_status LINEEND
    (56) view_specific_tickets -> . VIEW TICKET FOR person_name LINEEND
    (54) view_specific_reservations -> . VIEW RESERVATION FOR person_name LINEEND
    (170) mutex -> . DECLARE
    (69) if_statement -> . IF expression LBRACE statements RBRACE
    (70) if_statement -> . IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (71) if_statement -> . IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE
    (72) if_statement -> . IF expression LBRACE statements RBRACE ELIF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (73) for_statement -> . FOR IDENTIFIER IN RANGE LPAREN arguments RPAREN LBRACE statements RBRACE
    (74) for_statement -> . FOR IDENTIFIER IN iterables LBRACE statements RBRACE
    (77) repeatif_statement -> . REPEATIF expression LBRACE statements RBRACE

    $end            reduce using rule 175 (empty -> .)
    RBRACE          reduce using rule 175 (empty -> .)
    IDENTIFIER      shift and go to state 25
    OUTPUT          shift and go to state 26
    BOOK            shift and go to state 30
    VIEW            shift and go to state 32
    CANCEL          shift and go to state 33
    CONFIRM         shift and go to state 34
    PAY             shift and go to state 35
    LIST            shift and go to state 36
    DECLARE         shift and go to state 37
    IF              shift and go to state 38
    FOR             shift and go to state 31
    REPEATIF        shift and go to state 39

    statement                      shift and go to state 3
    statements                     shift and go to state 40
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    print_statement                shift and go to state 7
    conditionals                   shift and go to state 8
    book_reservation               shift and go to state 9
    view_list_reservations         shift and go to state 10
    cancel_reservation             shift and go to state 11
    cancel_reservation_identifier  shift and go to state 12
    confirm_reservation            shift and go to state 13
    confirm_reservation_identifier shift and go to state 14
    pay_reservation                shift and go to state 15
    pay_reservation_identifier     shift and go to state 16
    list_api_events                shift and go to state 17
    cancel_ticket_identifier       shift and go to state 18
    cancel_ticket                  shift and go to state 19
    book_ticket                    shift and go to state 20
    view_list_tickets              shift and go to state 21
    view_specific_tickets          shift and go to state 22
    view_specific_reservations     shift and go to state 23
    mutex                          shift and go to state 24
    if_statement                   shift and go to state 27
    for_statement                  shift and go to state 28
    repeatif_statement             shift and go to state 29

state 4

    (3) statements -> empty .

    $end            reduce using rule 3 (statements -> empty .)
    RBRACE          reduce using rule 3 (statements -> empty .)


state 5

    (4) statement -> declaration .

    IDENTIFIER      reduce using rule 4 (statement -> declaration .)
    OUTPUT          reduce using rule 4 (statement -> declaration .)
    BOOK            reduce using rule 4 (statement -> declaration .)
    VIEW            reduce using rule 4 (statement -> declaration .)
    CANCEL          reduce using rule 4 (statement -> declaration .)
    CONFIRM         reduce using rule 4 (statement -> declaration .)
    PAY             reduce using rule 4 (statement -> declaration .)
    LIST            reduce using rule 4 (statement -> declaration .)
    DECLARE         reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    REPEATIF        reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 6

    (5) statement -> assignment .

    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    OUTPUT          reduce using rule 5 (statement -> assignment .)
    BOOK            reduce using rule 5 (statement -> assignment .)
    VIEW            reduce using rule 5 (statement -> assignment .)
    CANCEL          reduce using rule 5 (statement -> assignment .)
    CONFIRM         reduce using rule 5 (statement -> assignment .)
    PAY             reduce using rule 5 (statement -> assignment .)
    LIST            reduce using rule 5 (statement -> assignment .)
    DECLARE         reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    REPEATIF        reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 7

    (6) statement -> print_statement .

    IDENTIFIER      reduce using rule 6 (statement -> print_statement .)
    OUTPUT          reduce using rule 6 (statement -> print_statement .)
    BOOK            reduce using rule 6 (statement -> print_statement .)
    VIEW            reduce using rule 6 (statement -> print_statement .)
    CANCEL          reduce using rule 6 (statement -> print_statement .)
    CONFIRM         reduce using rule 6 (statement -> print_statement .)
    PAY             reduce using rule 6 (statement -> print_statement .)
    LIST            reduce using rule 6 (statement -> print_statement .)
    DECLARE         reduce using rule 6 (statement -> print_statement .)
    IF              reduce using rule 6 (statement -> print_statement .)
    FOR             reduce using rule 6 (statement -> print_statement .)
    REPEATIF        reduce using rule 6 (statement -> print_statement .)
    $end            reduce using rule 6 (statement -> print_statement .)
    RBRACE          reduce using rule 6 (statement -> print_statement .)


state 8

    (7) statement -> conditionals .

    IDENTIFIER      reduce using rule 7 (statement -> conditionals .)
    OUTPUT          reduce using rule 7 (statement -> conditionals .)
    BOOK            reduce using rule 7 (statement -> conditionals .)
    VIEW            reduce using rule 7 (statement -> conditionals .)
    CANCEL          reduce using rule 7 (statement -> conditionals .)
    CONFIRM         reduce using rule 7 (statement -> conditionals .)
    PAY             reduce using rule 7 (statement -> conditionals .)
    LIST            reduce using rule 7 (statement -> conditionals .)
    DECLARE         reduce using rule 7 (statement -> conditionals .)
    IF              reduce using rule 7 (statement -> conditionals .)
    FOR             reduce using rule 7 (statement -> conditionals .)
    REPEATIF        reduce using rule 7 (statement -> conditionals .)
    $end            reduce using rule 7 (statement -> conditionals .)
    RBRACE          reduce using rule 7 (statement -> conditionals .)


state 9

    (8) statement -> book_reservation .

    IDENTIFIER      reduce using rule 8 (statement -> book_reservation .)
    OUTPUT          reduce using rule 8 (statement -> book_reservation .)
    BOOK            reduce using rule 8 (statement -> book_reservation .)
    VIEW            reduce using rule 8 (statement -> book_reservation .)
    CANCEL          reduce using rule 8 (statement -> book_reservation .)
    CONFIRM         reduce using rule 8 (statement -> book_reservation .)
    PAY             reduce using rule 8 (statement -> book_reservation .)
    LIST            reduce using rule 8 (statement -> book_reservation .)
    DECLARE         reduce using rule 8 (statement -> book_reservation .)
    IF              reduce using rule 8 (statement -> book_reservation .)
    FOR             reduce using rule 8 (statement -> book_reservation .)
    REPEATIF        reduce using rule 8 (statement -> book_reservation .)
    $end            reduce using rule 8 (statement -> book_reservation .)
    RBRACE          reduce using rule 8 (statement -> book_reservation .)


state 10

    (9) statement -> view_list_reservations .

    IDENTIFIER      reduce using rule 9 (statement -> view_list_reservations .)
    OUTPUT          reduce using rule 9 (statement -> view_list_reservations .)
    BOOK            reduce using rule 9 (statement -> view_list_reservations .)
    VIEW            reduce using rule 9 (statement -> view_list_reservations .)
    CANCEL          reduce using rule 9 (statement -> view_list_reservations .)
    CONFIRM         reduce using rule 9 (statement -> view_list_reservations .)
    PAY             reduce using rule 9 (statement -> view_list_reservations .)
    LIST            reduce using rule 9 (statement -> view_list_reservations .)
    DECLARE         reduce using rule 9 (statement -> view_list_reservations .)
    IF              reduce using rule 9 (statement -> view_list_reservations .)
    FOR             reduce using rule 9 (statement -> view_list_reservations .)
    REPEATIF        reduce using rule 9 (statement -> view_list_reservations .)
    $end            reduce using rule 9 (statement -> view_list_reservations .)
    RBRACE          reduce using rule 9 (statement -> view_list_reservations .)


state 11

    (10) statement -> cancel_reservation .
